# refactoring-igemoyag-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
accounts/: urls.py
auths/: serializers.py  views.py
backend/: pyproject.toml
backend/accounts/: urls.py  views.py
backend/auths/: models.py  serializers.py  urls.py  views.py
backend/config/: authentication.py  settings.py  urls.py
backend/pills/: models.py  serializers.py  urls.py  views.py
backend/pills/migrations/: 0001_initial.py
backend/templates/accounts/: password_reset_confirm.html  password_reset_email.txt
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
config/: authentication.py  settings.py
nginx/: default.conf
pills/: tests.py  urls.py  views.py
users/: serializers.py  tests.py  urls.py  views.py
