[tool.poetry]
name = "refactoring-igemoyag"
version = "0.1.0"
description = ""
authors = ["sgaeng <ksge1124@gmail.com>"]
readme = "README.md"
packages = [{include = "refactoring_igemoyag"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
psycopg2-binary = "^2.9.6"
pyjwt = "^2.6.0"
django-cors-headers = "^4.2.0"
pillow = "^10.0.0"
django-environ = "^0.10.0"
drf-yasg = "^1.21.5"
gunicorn = "^20.1.0"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
opencv-python = "^4.8.0.76"
numpy = "^1.25.2"
openpyxl = "^3.1.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"